--- a/CoroutineTest/CoroutineTest/CoroutineTest.vcxproj.filters
+++ b/CoroutineTest/CoroutineTest/CoroutineTest.vcxproj.filters
@@ -56,6 +56,9 @@
     <ClCompile Include="1 MiLi coroutine.h">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="using_future.hpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
