--- a/CoroutineTest/CoroutineTest/CoroutineTest.vcxproj
+++ b/CoroutineTest/CoroutineTest/CoroutineTest.vcxproj
@@ -147,22 +147,12 @@
     <ClInclude Include="3 MiLi await.hpp" />
     <ClInclude Include="coroutines_ts.h" />
     <ClInclude Include="cts_tasks.h" />
+    <ClInclude Include="gsl-lite.hpp" />
     <ClInclude Include="MiLi\mili\coroutines.h" />
     <ClInclude Include="MiLi\mili\mili.h" />
     <ClInclude Include="mili_helpers.h" />
     <ClInclude Include="scenario.h" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-  <ImportGroup Label="ExtensionTargets">
-    <Import Project="..\packages\Microsoft.Gsl.0.1.2.1\build\native\Microsoft.Gsl.targets" Condition="Exists('..\packages\Microsoft.Gsl.0.1.2.1\build\native\Microsoft.Gsl.targets')" />
-  </ImportGroup>
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Microsoft.Gsl.0.1.2.1\build\native\Microsoft.Gsl.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Gsl.0.1.2.1\build\native\Microsoft.Gsl.targets'))" />
-  </Target>
+  <ImportGroup Label="ExtensionTargets" />
 </Project>
