--- a/CoroutineTest/CoroutineTest/CoroutineTest.vcxproj.filters
+++ b/CoroutineTest/CoroutineTest/CoroutineTest.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="cts_tasks.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="gsl-lite.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -62,8 +65,5 @@
     <ClCompile Include="cts_tasks.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
 </Project>
